# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fenc=utf-8 sts=4 ts=4 et nomod:

2021-02-11 Michael Truog   <mjtruog at protonmail dot com>

    * Improve count_process_dynamic logic
    * Fix Java, Perl, PHP, Ruby integration tests CloudI API initialization
      (exceptions are caught properly now)

2021-02-09 Michael Truog   <mjtruog at protonmail dot com>

    * Add the suspend_dependants argument to
      cloudi_service_api_batch for automatically suspending any
      dependant service (that is already running) and automatically
      resuming once the queue dependency has finished running
      all of its queued service configurations
    * Fix service configuration options rate_request_max,
      count_process_dynamic and hibernate, in external services,
      so their intervals start after service initialization has occurred
    * Improve count_process_dynamic service initialization
    * Fix Python and Python/C integration tests CloudI API initialization
      (exceptions are caught properly now)

2021-02-05 Michael Truog   <mjtruog at protonmail dot com>

    * Fix bug with suspended services that restart with the
      service configuration option restart_all set to false (default)
      that causes the CloudI Service API services_status processing to fail
    * Fix count_process_dynamic service configuration option use
      when a service is suspended so the service avoids changes
      based on the time spent being suspended

2021-02-02 Michael Truog   <mjtruog at protonmail dot com>

    * Add retry and retry_delay arguments to cloudi_service_map_reduce

2021-01-31 Michael Truog   <mjtruog at protonmail dot com>

    * Change cloudi_service_api_batch services_remove HTTP method
      from "get" to "delete" (due to modifying a queue)
    * Add the queue_dependencies argument to
      cloudi_service_api_batch for representing dependencies
      between queues for automatically managing service runtime